# homun

./: .gitignore  README.md  pyproject.toml
homun/: __main__.py  bot.py
homun/bot/: __init__.py  botlogging.py  bottle.py  commands.py  config.py
homun/lib/: owoify.py  smh.py
logs/: .gitignore
token/: .gitignore
