[tool.poetry]
name = "homun"
version = "0.1.0"
description = "Backup Potion's resident homunculus!"
authors = ["Floozutter <floozutter@gmail.com>"]
license = "Unlicense"

[tool.poetry.dependencies]
python = "^3.9"
"discord.py" = "^1.6.0"
PyNaCl = "^1.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
